# lora-finetune-lab

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  code-walkthrough.md  free-gpu-guide.md  interview-questions.md  lessons-learned.md  when-to-finetune.md
notebooks/: qlora_finetune.ipynb  unsloth_finetune.ipynb
src/lora_finetune_lab/: __init__.py  cli.py  config.py  dataset.py  debuglog.py  errors.py  evaluation.py  gemini.py  prompts.py  train.py
tests/: conftest.py  test_config.py  test_dataset.py  test_debuglog.py  test_evaluation.py  test_gemini.py  test_prompts.py
