[project]
name = "lora-finetune-lab"
version = "0.1.0"
description = "QLoRA fine-tuning lab: Colab notebook + CPU-testable data/prompt/eval code + when-to-fine-tune analysis."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ArunRyzen" }]
# Core deps are intentionally light (no torch): the dataset/prompt/eval code is CPU-testable and
# runs in CI. The heavy training stack lives in the optional `train` extra and on Colab.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
]

[project.scripts]
lora = "lora_finetune_lab.cli:app"

[project.optional-dependencies]
# Installed on Colab/Kaggle (GPU) for actual training — see notebooks/qlora_finetune.ipynb.
train = [
    "torch>=2.2",
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.9",
    "datasets>=2.20",
    "accelerate>=0.33",
    "bitsandbytes>=0.43",
]
# Optional: adds a Gemini API model as one more comparison point in `lora eval`.
# The repo works fully offline without it — see src/lora_finetune_lab/gemini.py.
gemini = [
    "google-genai>=1.0",
]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora_finetune_lab"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
# Notebook cells are illustrative Colab code, not linted production source.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "N", "W"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
